Experiments with native-image tool