@@ -1,6 +1,7 @@
 package io.bootique.tools.template.processor;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import io.bootique.tools.template.DefaultPropertyService;
 import io.bootique.tools.template.Template;
@@ -22,11 +23,11 @@ public class JavaPackageProcessorTest {
 
     @Test
     public void processTemplate() {
-        Template template = new Template(Path.of("example", "MyClass.java"), "package example;");
+        Template template = new Template(Paths.get("example", "MyClass.java"), "package example;");
         Template result = processor.process(template);
 
         assertEquals("package io.bootique.test;", result.getContent());
-        assertEquals(Path.of("/io", "bootique", "test", "MyClass.java"), result.getPath());
+        assertEquals(Paths.get("/io", "bootique", "test", "MyClass.java"), result.getPath());
     }
 
     @Test
@@ -45,28 +46,28 @@ public class JavaPackageProcessorTest {
                 "    private JavaPackageProcessor processor;" +
                 "}";
 
-        String processed = processor.processContent(new Template(Path.of(""), content));
+        String processed = processor.processContent(new Template(Paths.get(""), content));
         assertEquals(expected, processed);
     }
 
     @Test
     public void outputPathSimple() {
-        Path path = Path.of("tpl/example/MyClass.java");
+        Path path = Paths.get("tpl/example/MyClass.java");
         Path out = processor.outputPath(new Template(path, ""));
-        assertEquals(Path.of("tpl", "io", "bootique", "test", "MyClass.java"), out);
+        assertEquals(Paths.get("tpl", "io", "bootique", "test", "MyClass.java"), out);
     }
 
     @Test
     public void outputPathWithPackage() {
-        Path path = Path.of("tpl/example/service/MyClass.java");
+        Path path = Paths.get("tpl/example/service/MyClass.java");
         Path out = processor.outputPath(new Template(path, ""));
-        assertEquals(Path.of("tpl", "io", "bootique", "test", "service", "MyClass.java"), out);
+        assertEquals(Paths.get("tpl", "io", "bootique", "test", "service", "MyClass.java"), out);
     }
 
     @Test
     public void packageToPath() {
-        assertEquals(Path.of("io"), processor.packageToPath("io"));
-        assertEquals(Path.of("io", "bootique"), processor.packageToPath("io.bootique"));
-        assertEquals(Path.of("io", "bootique", "test"), processor.packageToPath("io.bootique.test"));
+        assertEquals(Paths.get("io"), processor.packageToPath("io"));
+        assertEquals(Paths.get("io", "bootique"), processor.packageToPath("io.bootique"));
+        assertEquals(Paths.get("io", "bootique", "test"), processor.packageToPath("io.bootique.test"));
     }
 }
