@@ -1,9 +1,11 @@
 package io.bootique.tools.template.source;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Map;
 import java.util.Set;
 
+import io.bootique.tools.Utils;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -14,10 +16,10 @@ public class SourceSetTest {
     private SourceSet sourceSet;
     
     private final static Path[] PATHS = {
-            Path.of("some","path"),
-            Path.of("some","other", "path", "file.ext"),
-            Path.of("some","file.ext"),
-            Path.of("file.ext")
+            Paths.get("some","path"),
+            Paths.get("some","other", "path", "file.ext"),
+            Paths.get("some","file.ext"),
+            Paths.get("file.ext")
     };
 
     @Before
@@ -28,7 +30,7 @@ public class SourceSetTest {
     @Test
     public void testDefaultFilter() {
 
-        Map<Path, Boolean> testData = Map.of(
+        Map<Path, Boolean> testData = Utils.mapOf(
                 PATHS[0], true, 
                 PATHS[1], true, 
                 PATHS[2], true, 
@@ -41,9 +43,9 @@ public class SourceSetTest {
     @Test
     public void testOneIncludeFilter() {
 
-        sourceSet.setIncludes(Set.of(PATHS[0]::equals));
+        sourceSet.setIncludes(Utils.setOf(PATHS[0]::equals));
 
-        Map<Path, Boolean> testData = Map.of(
+        Map<Path, Boolean> testData = Utils.mapOf(
                 PATHS[0], true,
                 PATHS[1], false,
                 PATHS[2], false,
@@ -57,9 +59,9 @@ public class SourceSetTest {
     public void testOneExcludeFilter() {
 
         SourceFilter filter = PATHS[0]::equals;
-        sourceSet.setExcludes(Set.of(filter.negate()));
+        sourceSet.setExcludes(Utils.setOf(filter.negate()));
 
-        Map<Path, Boolean> testData = Map.of(
+        Map<Path, Boolean> testData = Utils.mapOf(
                 PATHS[0], false,
                 PATHS[1], true,
                 PATHS[2], true,
@@ -72,9 +74,9 @@ public class SourceSetTest {
     @Test
     public void testCombinedIncludeFilter() {
 
-        sourceSet.setIncludes(Set.of(PATHS[0]::equals, PATHS[2]::equals));
+        sourceSet.setIncludes(Utils.setOf(PATHS[0]::equals, PATHS[2]::equals));
 
-        Map<Path, Boolean> testData = Map.of(
+        Map<Path, Boolean> testData = Utils.mapOf(
                 PATHS[0], true,
                 PATHS[1], false,
                 PATHS[2], true,
@@ -89,9 +91,9 @@ public class SourceSetTest {
 
         SourceFilter filter1 = PATHS[0]::equals;
         SourceFilter filter2 = PATHS[2]::equals;
-        sourceSet.setExcludes(Set.of(filter1.negate(), filter2.negate()));
+        sourceSet.setExcludes(Utils.setOf(filter1.negate(), filter2.negate()));
 
-        Map<Path, Boolean> testData = Map.of(
+        Map<Path, Boolean> testData = Utils.mapOf(
                 PATHS[0], false,
                 PATHS[1], true,
                 PATHS[2], false,
@@ -104,13 +106,13 @@ public class SourceSetTest {
     @Test
     public void testCombinedFilter() {
 
-        sourceSet.setIncludes(Set.of(PATHS[0]::equals, PATHS[2]::equals));
+        sourceSet.setIncludes(Utils.setOf(PATHS[0]::equals, PATHS[2]::equals));
 
         SourceFilter filter1 = PATHS[0]::equals;
         SourceFilter filter2 = PATHS[3]::equals;
-        sourceSet.setExcludes(Set.of(filter1.negate(), filter2.negate()));
+        sourceSet.setExcludes(Utils.setOf(filter1.negate(), filter2.negate()));
 
-        Map<Path, Boolean> testData = Map.of(
+        Map<Path, Boolean> testData = Utils.mapOf(
                 PATHS[0], false,
                 PATHS[1], false,
                 PATHS[2], true,
@@ -122,7 +124,7 @@ public class SourceSetTest {
 
     private void testSourceFilter(Map<Path, Boolean> testData) {
         SourceFilter filter = sourceSet.combineFilters();
-        for(var entry : testData.entrySet()) {
+        for(Map.Entry<Path, Boolean> entry : testData.entrySet()) {
             assertEquals(entry.getKey() + "", entry.getValue(), filter.test(entry.getKey()));
         }
     }
